--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
     "jwks-rsa": "^3.2.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "luxon": "^3.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
